--- a/styles/theme.css
+++ b/styles/theme.css
@@ -295,9 +295,9 @@ a.link:hover { color: #662E91; cursor: pointer; }
 /********************************************************************/
 /***                Image Collection View                           */
 /********************************************************************/
-.image-collection-view { overflow: hidden; width: 100%; position: relative; margin: 0px; padding: 0px; border: none; }
+.image-collection-view { min-height: 400px; overflow: hidden; width: 100%; position: relative; margin: 0px; padding: 0px; border: none; }
 .image-collection-view:hover .directional-btn { opacity: 1; cursor: pointer; }
-.image-collection-view .image { width: 100%; min-width: 100%; height: 400px; background-size: cover; background-position: top center; display: block; max-height: 100%; background-repeat: no-repeat; background-color: #662E91; } 
+.image-collection-view .image { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-size: cover; background-position: top center; display: block; max-height: 100%; background-repeat: no-repeat; background-color: #662E91; } 
 .image-collection-view .image:not(.active) { display: none; }
 
 /********************************************************************/
@@ -326,6 +326,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .facebook-post .post-content .post-link .play-link:hover:before { background: rgba(0,0,0,0.5); }
 .facebook-post .post-content .post-link .play-link:before { content: ''; position: absolute; width: 40px; height: 40px; margin-top: -22px; margin-left: -22px; left: 50%; top: 50%; border: 2px solid #fff; border-radius: 50px; }
 .facebook-post .post-content .post-link .play-link:after { content: ''; position: absolute; width: 0px; height: 0px; top: 50%; left: 50%; margin-left: -6px; margin-top: -8px; border-left: 16px solid #fff; border-top: 8px solid transparent; border-bottom: 8px solid transparent; }
+.facebook-post .post-content .post-link .play-link img { max-width: 100%; }
 .facebook-post .post-content .post-link-details { display: flex; flex-direction: column; padding: 10px; }
 .facebook-post .post-content .post-link-details .title { line-height: 20px; font-size: 18px; }
 .facebook-post .post-content .post-link-details .desc { margin-top: 5px; flex-grow: 2; font-size: 12px; max-height: 66px; overflow: hidden; text-overflow: ellipsis; word-break: break-word; line-height: 16px; }
@@ -363,7 +364,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .pricing-list { flex-wrap: wrap; display: flex; flex-direction: row; align-items: stretch; justify-content: space-between; }
 .pricing-block { text-align: center; flex: 1 0 150px; margin: 5px; display: flex; flex-direction: column; background: #f9f9f9; box-shadow: inset 0px 0px 0px 1px #e4e4e5; border-radius: 5px; }
 .pricing-block .pricing-header { white-space: nowrap; padding: 15px; background: #8851B3; color: #fff; flex: 0 0 auto; font-size: 24px; border-radius: 5px 5px 0 0; }
-.pricing-block .pricing-content { display: flex; flex-direction: column; flex: 2; }
+.pricing-block .pricing-content { display: flex; flex-direction: column; flex: 2 2 auto; }
 .pricing-block .price { flex: 0 0 100px; margin: 20px auto; width: 100px; border-radius: 100px; border: 5px solid #cfb9e1; background: #8851B3; color: #fff; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 .pricing-block .price .text { font-size: 36px; margin: 5px 0; }
 .pricing-block .price .sub-text { font-family: Helvetica, Arial, sans-serif; font-size: 12px; }
@@ -493,23 +494,23 @@ a.link:hover { color: #662E91; cursor: pointer; }
 }
 
 @media (min-height: 800px) and (max-height: 1000px) {
-	.image-collection-view .image { height: 500px; }
+	.image-collection-view { min-height: 500px; }
 }
 
 @media (min-height: 1001px) {
-	.image-collection-view .image { height: 600px; }
+	.image-collection-view { min-height: 600px; }
 }
 
 @media (min-height: 800px) and (min-width: 1300px) {
-	.image-collection-view .image { height: 600px; }
+	.image-collection-view { min-height: 600px; }
 }
 
 @media (min-height: 800px) and (min-width: 1700px) {
-	.image-collection-view .image { height: 700px; }
+	.image-collection-view { min-height: 700px; }
 }
 
 @media (max-width: 350px) {
-	.image-collection-view .image { height: 300px; }
+	.image-collection-view { min-height: 300px; }
 }
 
 @media (max-width: 900px) { 
@@ -665,11 +666,11 @@ a.link:hover { color: #662E91; cursor: pointer; }
 /********************************************************************/
 /********************************************************************/
 @media (max-height: 1200px) {
-	.wod-view .image-collection-view .image { height: 400px; }
+	.wod-view .image-collection-view { min-height: 400px; }
 }
 
 @media (max-height: 1000px) {
-	.wod-view .image-collection-view .image { height: 300px; }
+	.wod-view .image-collection-view { min-height: 300px; }
 }
 
 @media (max-height: 800px) {
@@ -682,9 +683,11 @@ a.link:hover { color: #662E91; cursor: pointer; }
 }
 
 @media (max-height: 700px) {
-	.login-view .image-collection-view .image { max-height: 130px; }
+	.image-collection-view { min-height: 300px; }
 
-	.wod-view .image-collection-view .image { height: 200px; }
+	.login-view .image-collection-view { min-height: 130px }
+
+	.wod-view .image-collection-view { min-height: 200px; }
 }
 
 /********************************************************************/
