--- a/styles/theme.css
+++ b/styles/theme.css
@@ -260,8 +260,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .image-viewer .ctrl:hover { background-color: #662E91; }
 .image-viewer .prev-btn { right: 50%; border-radius: 5px 0 0 5px; }
 .image-viewer .next-btn { left:  50%; border-radius: 0 5px 5px 0; }
-.image-viewer .image-wrapper { flex: 1 1 100%; padding: 0 5px; display: flex; align-items: center; justify-content: center; }
-.image-viewer img { max-width: 100%; max-height: 100%; }
+.image-viewer .image { flex: 1 1 100%; padding: 0 5px; background-position: center center; background-size: contain; background-repeat: no-repeat; }
 
 /********************************************************************/
 /***                Send Message Pane                               */
@@ -458,9 +457,9 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .home-view .details-block { flex: 1 0 25%; min-height: 200px; position: relative; cursor: pointer; display: flex; align-items: stretch; } 
 .home-view .details-block .background { position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 1; background-position: center center; background-size: cover; }
 .home-view .details-block .content { flex: 1 1 100%; position: relative; z-index: 2; display: flex; flex-direction: column; align-items: stretch; background: rgba(0,0,0,0.6); }
-.home-view .details-header { font-size: 36px; flex: 0 0 90px; line-height: 42px; margin: 35px 20% 0 20%; }
-.home-view .details-desc { flex: 1 1 auto; margin: 25px 20%; font-family: Helvetica, Arial, sans-serif; font-size: 16px; }
-.home-view .details-footer { font-weight: bold; font-style: italic; font-size: 16px; flex: 0 0 auto; font-family: Helvetica, Arial, sans-serif; margin: 0 20% 20px 20%; }
+.home-view .details-header { font-size: 36px; flex: 0 0 90px; line-height: 42px; margin: 20px 15% 0 15%; }
+.home-view .details-desc { flex: 1 1 auto; margin: 15px 15%; font-family: Helvetica, Arial, sans-serif; font-size: 16px; }
+.home-view .details-footer { font-weight: bold; font-style: italic; font-size: 16px; flex: 0 0 auto; font-family: Helvetica, Arial, sans-serif; margin: 0 15% 20px 15%; }
 .home-view .details-block .details-header,
 .home-view .details-block .details-desc,
 .home-view .details-block .details-footer { color: #fff; transition: color 0.1s linear; }
@@ -492,6 +491,182 @@ a.link:hover { color: #662E91; cursor: pointer; }
 	-webkit-filter: grayscale(100%);
 	filter: grayscale(100%);
 }
+
+.popup {
+	position: fixed;
+	z-index: -1;
+	top:    0;
+	left:   0;
+	bottom: 0;
+	right:  0;
+	background: rgba(0,0,0,0.7);
+	opacity: 0;
+	padding: 20px;
+	transition: opacity 0.5s ease-in-out, z-index 0.05s ease-in-out 0.45s;
+}
+
+.popup.show {
+	z-index: 20;
+	opacity: 1;
+	transition: opacity 0.5s ease-in-out;
+}
+
+.popup .panel {
+	position: relative;
+	height: 100%;
+}
+
+.popup .content {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	max-width: 375px;
+	max-height: 100%;
+}
+
+.popup .header {
+	font-size: 2rem;
+	text-align: center;
+	color: #8851b3;
+	padding: 15px 0;
+	background: #fff;
+	position: relative;
+}
+
+.popup .image {
+	background-position: center center; background-size: cover; background-repeat: no-repeat;
+	padding-bottom: 45%;
+	margin: 0 auto;
+	border-top: 4px solid #662e91;
+	border-bottom: 4px solid #662e91;
+}
+
+.popup .details {
+	background: #fff;
+	font-family: Helvetica, Arial, sans-serif;
+	text-align: center;
+	padding: 0 20px 10px 20px;
+}
+
+.popup .details p {
+	padding-top: 10px;
+	font-size: 0.9rem;
+}
+
+.popup .separator {
+	background: #662e91;
+	background: -moz-linear-gradient(left, #662e91 0%, #8851b3 100%);
+	background: -webkit-linear-gradient(left, #662e91 0%,#8851b3 100%);
+	background: linear-gradient(to right, #662e91 0%,#8851b3 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#662e91', endColorstr='#8851b3',GradientType=1 );
+	font-family: Helvetica, Arial, sans-serif; 
+	text-align: center;
+	padding: 15px;
+	color: #fff;
+}
+
+.popup .separator p:first-child {
+	font-size: 1.5rem;
+}
+.popup .separator p:not(:first-child) {
+	margin-top: 5px;
+}
+
+.popup .footer {
+    display: flex;
+    flex-flow: row;
+    color: #ddd;
+    align-items: stretch;
+    justify-content: center;
+    background: #000;
+    font-family: Helvetica, Arial, sans-serif; 
+}
+
+.popup .footer .link {
+	flex: 0 1 50%;
+    padding: 10px 0;
+    justify-content: center;
+    margin-top: 1px;
+    background: #292929;
+    transition: color 0.2s ease-in-out;
+    position: relative;
+    flex-wrap: nowrap;
+}
+
+.popup .footer .link .fa {
+	flex: 0 0 auto;
+	padding-left: 10px;
+}
+
+.popup .footer .link .text {
+	padding: 0 10px;
+	font-size: 0.8rem;
+	text-overflow: ellipsis;
+	flex: 0 1 auto;
+	white-space: nowrap;
+}
+
+.popup .footer .link:hover {
+	color: #fff;
+}
+
+.popup .footer .link:not(:first-child) {
+	margin-left: 1px;
+}
+/*  #EA0D2B, #c10b23 */
+.popup .close-btn { transition: background 0.2s ease-in-out; top: 0px; right: 0px; cursor: pointer; position: absolute; width: 30px; height: 30px; padding: 0; border: none; background: none; transform: translate(50%, -50%); background: #c10b23; border-radius: 30px; }
+.popup .close-btn .bar { width: 100%; height: 2px; background-color: #fff; display: block; position: relative; width: 16px; border-radius: 5px; transform-origin: center; margin: auto; }
+.popup .close-btn .bar:first-child { transform: rotate(45deg); }
+.popup .close-btn .bar:last-child { transform: rotate(-45deg); margin-top: -2px; }
+.popup .close-btn:hover { background: #ea0d2b; }
+
+.popup .footer .link .extender {
+	z-index: -1;
+	opacity: 0;
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translate(-50%, 0);
+	background: #000; 
+	padding: 10px 15px;
+	border-radius: 5px;
+	font-size: 0.9rem;
+	line-height: 1.34em;
+	text-align: center;
+	white-space: nowrap;
+	margin-top: 6px;
+}
+
+.popup .footer .link .extender:before {
+	content: '';
+	border-width: 0 6px 10px 6px;
+	border-style: solid;
+	border-color: transparent transparent #000 transparent;
+	position: absolute;
+	bottom: 100%;
+	left: 50%;
+	margin-left: -6px;
+}
+
+.popup .footer .link:hover .extender {
+	opacity: 1;
+	z-index: 1;
+}
+
+@media (max-width: 349px) {
+	.popup .footer { flex-flow: row wrap; }
+	.popup .footer .link { flex: 1 1 100%; }
+}
+
+@media (max-width: 349px) and (max-height: 599px) {
+	.popup .image { display: none; }
+	.popup .footer .link .icon { font-size: 0.8rem; }
+	.popup .footer .link .text { font-size: 0.7rem; }
+}
+
+/* #353535 #151515 #292929 #ddd */
 
 @media (min-height: 800px) and (max-height: 1000px) {
 	.image-collection-view { min-height: 500px; }
