--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -180,17 +180,17 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .content-loader .rectangles .rect5 {-webkit-animation-delay:-1.1s; animation-delay:-1.1s }
 
 @-webkit-keyframes stretchdelay {
-	0%, 
-	40%, 
+	0%,
+	40%,
 	100% { -webkit-transform:scaleY(0.4); }
 	20%  { -webkit-transform:scaleY(1);   }
 }
 
-@keyframes stretchdelay { 
-	0%, 
-	40%, 
+@keyframes stretchdelay {
+	0%,
+	40%,
 	100% { transform:scaleY(0.4);-webkit-transform:scaleY(0.4); }
-	20%  { transform:scaleY(1);  -webkit-transform:scaleY(1);   } 
+	20%  { transform:scaleY(1);  -webkit-transform:scaleY(1);   }
 }
 
 /********************************************************************/
@@ -296,7 +296,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 /********************************************************************/
 .image-collection-view { min-height: 400px; overflow: hidden; width: 100%; position: relative; margin: 0px; padding: 0px; border: none; }
 .image-collection-view:hover .directional-btn { opacity: 1; cursor: pointer; }
-.image-collection-view .image { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-size: cover; background-position: top center; display: block; max-height: 100%; background-repeat: no-repeat; background-color: #662E91; } 
+.image-collection-view .image { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background-size: cover; background-position: top center; display: block; max-height: 100%; background-repeat: no-repeat; background-color: #662E91; }
 .image-collection-view .image:not(.active) { display: none; }
 
 /********************************************************************/
@@ -454,7 +454,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .home-view .today-section .empty { color: #ddd; padding: 15px 10px; font-size: 16px; font-family: Helvetica, Arial, sans-serif; }
 
 .home-view .details-row { align-items: stretch; flex-wrap: wrap; border-top: 5px solid #662e91; }
-.home-view .details-block { flex: 1 0 25%; min-height: 200px; position: relative; cursor: pointer; display: flex; align-items: stretch; } 
+.home-view .details-block { flex: 1 0 25%; min-height: 200px; position: relative; cursor: pointer; display: flex; align-items: stretch; }
 .home-view .details-block .background { position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: 1; background-position: center center; background-size: cover; }
 .home-view .details-block .content { flex: 1 1 100%; position: relative; z-index: 2; display: flex; flex-direction: column; align-items: stretch; background: rgba(0,0,0,0.6); }
 .home-view .details-header { font-size: 36px; flex: 0 0 90px; line-height: 42px; margin: 20px 15% 0 15%; }
@@ -483,6 +483,17 @@ a.link:hover { color: #662E91; cursor: pointer; }
 
 .home-view .instagram-feed { flex-wrap: nowrap; }
 .home-view .instagram-feed .media { flex: 1 0 34%; margin: 0px; }
+
+.waiver-list { display: flex; flex-flow: row wrap; align-items: stretch; justify-content: center; margin: 0 -10px; }
+.waiver-list .waiver { position: relative; height: 300px; flex: 1 0 40%; margin: 0 10px 15px 10px; max-width: 600px; min-width: 300px; }
+.waiver-list .waiver .background { position: absolute; top: 0; left: 0; right: 0; bottom: 0; z-index: -1; background-position: center center; background-size: cover; }
+.waiver-list .waiver .content { transition: box-shadow 0.2s ease-in-out; height: 100%; display: flex; flex-flow: column; align-items: center; justify-content: center; background: rgba(0,0,0,0.6); color: #fff; position: relative; z-index: 1; }
+.waiver-list .waiver .details-desc { transition: color 0.2s ease-in-out; font-size: 36px; }
+.waiver-list .waiver .details-footer { transition: color 0.2s ease-in-out; font-weight: bold; font-style: italic; font-size: 16px; flex: 0 0 auto; font-family: Helvetica, Arial, sans-serif; margin-top: 20px; }
+.waiver-list .waiver:hover .details-desc { color: #cb8cfd; }
+.waiver-list .waiver:hover .details-footer { color: #b86ef3; }
+.waiver-list .waiver:hover .content { box-shadow: inset 0 0 0 5px #662e91; }
+
 
 .grayscale {
 	-moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
@@ -561,7 +572,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 	background: -webkit-linear-gradient(left, #662e91 0%,#8851b3 100%);
 	background: linear-gradient(to right, #662e91 0%,#8851b3 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#662e91', endColorstr='#8851b3',GradientType=1 );
-	font-family: Helvetica, Arial, sans-serif; 
+	font-family: Helvetica, Arial, sans-serif;
 	text-align: center;
 	padding: 15px;
 	color: #fff;
@@ -581,7 +592,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
     align-items: stretch;
     justify-content: center;
     background: #000;
-    font-family: Helvetica, Arial, sans-serif; 
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 .popup .footer .link {
@@ -629,7 +640,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 	top: 100%;
 	left: 50%;
 	transform: translate(-50%, 0);
-	background: #000; 
+	background: #000;
 	padding: 10px 15px;
 	border-radius: 5px;
 	font-size: 0.9rem;
@@ -688,7 +699,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 	.image-collection-view { min-height: 300px; }
 }
 
-@media (max-width: 900px) { 
+@media (max-width: 900px) {
 
 	.home-view .welcome-row { flex-wrap: wrap; }
 	.home-view .today-section { flex: 1 1 100%; }
@@ -709,9 +720,9 @@ a.link:hover { color: #662E91; cursor: pointer; }
 }
 
 @media (max-width: 1000px) { .home-view .details-block { flex: 1 0  50%; } }
-@media (max-width:  500px) { 
+@media (max-width:  500px) {
 
-	.home-view .details-block { flex: 1 1 100%; } 
+	.home-view .details-block { flex: 1 1 100%; }
 	.home-view .instagram-feed .media { flex: 1 0 50%; }
 	.home-view .facebook-post-content .posted-by a { margin-left: 80px; }
 }
@@ -768,7 +779,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 	.app-nav .logo { flex-wrap: wrap; }
 
 	.app-nav .nav-link .link-text { transition: max-width 0.5s; flex-shrink: 0; }
-	
+
 	.desktop .app-nav .user-greeting p { max-width: 0px; }
 	.desktop .app-nav .nav-link .link-text { max-width: 0px; }
 
@@ -803,12 +814,12 @@ a.link:hover { color: #662E91; cursor: pointer; }
 	.app-nav .user-greeting p { overflow: hidden; white-space: nowrap; transition: max-width 0.5s; }
 
 	.app-nav .nav-link .fa { flex-shrink: 0; }
-	
+
 	.weekly-schedule .week-day.today .title { background: #000; }
 }
 
 @media (min-width: 701px) {
-	.about-us-view .section .youtube-frame { width: 600px; height: 400px; }	
+	.about-us-view .section .youtube-frame { width: 600px; height: 400px; }
 }
 
 @media (min-width: 801px) {
@@ -820,7 +831,7 @@ a.link:hover { color: #662E91; cursor: pointer; }
 }
 
 @media (min-width: 1000px) {
-	.about-us-view .section .youtube-frame { width: 900px; height: 600px; }		
+	.about-us-view .section .youtube-frame { width: 900px; height: 600px; }
 }
 
 @media (min-width: 601px) and (max-width: 1100px) {
