added bring the ruckus2.0

--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -48,6 +48,53 @@ body { font-family:"bebas-neue",sans-serif; margin: 0; padding: 0; font-size: 16
 .loader:not(.hidden) { display: flex; align-items: center; justify-content: center; font-size: 20px; }
 .loader:not(.hidden) ~ * { display: none; }
 
+.bring-the-ruckus { font-family: Helvetica, Arial, sans-serif; }
+.bring-the-ruckus .uppercase { text-transform: uppercase; }
+.bring-the-ruckus .sponsor-logos .image { padding: 20px; }
+.bring-the-ruckus .content h2,
+.bring-the-ruckus .content h3,
+.bring-the-ruckus .content > p,
+.bring-the-ruckus .content .split { max-width: 1000px; margin: 0 auto; }
+.bring-the-ruckus .content { padding: 40px; }
+.bring-the-ruckus .content:nth-child(2n) { background-color: #f1f3f5; border-top: 1px solid #eceff3; border-bottom: 1px solid #eceff3; }
+.bring-the-ruckus .content h2 { text-align: center; font-size: 2rem; font-weight: 200; line-height: 1.3em; padding: 0 15px 30px 15px; }
+.bring-the-ruckus .content h2.primary { color: #662E91; padding-bottom: 5px; }
+.bring-the-ruckus .content h3 { text-align: center; font-size: 1.2rem; font-weight: 200; line-height: 1.3em; padding: 0 15px 30px 15px; font-style: italic; }
+.bring-the-ruckus .content p { font-size: 1.2rem; font-weight: 100; padding-bottom: 20px; line-height: 1.3em; }
+.bring-the-ruckus .content p.bold { font-weight: 600; }
+.bring-the-ruckus .italic { font-style: italic; }
+.bring-the-ruckus .video { margin-top: 4px; }
+.bring-the-ruckus .video iframe { width: 100%; }
+.bring-the-ruckus img { max-width: 100%; max-height: 100%; }
+
+.bring-the-ruckus-2-cta { text-align: center; display: flex; flex-flow: column; align-items: center; }
+.bring-the-ruckus-2-cta .btn { font-size: 1.2rem; padding: 12px 28px; margin: 12px 0; }
+.bring-the-ruckus-2-cta .btn:not(:last-child) { margin-right: 0; }
+.bring-the-ruckus-2-cta .btn.inverse:hover { background-color: #333; }
+
+@media (min-width: 751px) {
+	.bring-the-ruckus .split { display: flex; flex-flow: row; }
+	.bring-the-ruckus .split > div:not(:last-child) { margin-right: 20px; }
+	.bring-the-ruckus .split > div:not(:first-child) { margin-left: 20px; }
+	.bring-the-ruckus .video { flex: 0 0 50%; text-align: center; }
+	.bring-the-ruckus .video img { max-width: 300px; margin: 0 auto; }
+}
+
+@media (max-width: 750px) {
+	.bring-the-ruckus .video iframe { margin-bottom: 20px; }
+	.bring-the-ruckus .sponsor-logos .image:first-child { display: none; }
+	.bring-the-ruckus .video img { display: none; }
+}
+
+@media (min-width: 401px) {
+	.bring-the-ruckus .sponsor-logos { display: flex; flex-flow: row; align-items: center; }
+	.bring-the-ruckus .sponsor-logos .image { flex: 0 0 33%; max-width: 200px; margin: 0 auto; }
+}
+
+@media (max-width: 400px) {
+	.bring-the-ruckus .sponsor-logos {  }
+}
+
 /********************************************************************/
 /***                Inputs                                          */
 /********************************************************************/
@@ -501,7 +548,6 @@ a.link:hover { color: #662E91; cursor: pointer; }
 .waiver-list .waiver:hover .details-desc { color: #cb8cfd; }
 .waiver-list .waiver:hover .details-footer { color: #b86ef3; }
 .waiver-list .waiver:hover .content { box-shadow: inset 0 0 0 5px #662e91; }
-
 
 .grayscale {
 	-moz-filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
