--- a/public/styles/theme.css
+++ b/public/styles/theme.css
@@ -48,6 +48,47 @@ body { font-family:"bebas-neue",sans-serif; margin: 0; padding: 0; font-size: 16
 .loader:not(.hidden) { display: flex; align-items: center; justify-content: center; font-size: 20px; }
 .loader:not(.hidden) ~ * { display: none; }
 
+/********************************************************************/
+/***                Kids Summer Camp 				                        */
+/********************************************************************/
+.kids-summer-camp-view { font-family: Helvetica, Arial, sans-serif; font-weight: lighter; font-size: 1.2rem; line-height: 1.8em; }
+.kids-summer-camp-view .sponsor-logos .image { padding: 20px; }
+.kids-summer-camp-view img { max-width: 100%; max-height: 100%; }
+.kids-summer-camp-view h2 { font-size: 3rem; font-weight: lighter; }
+.kids-summer-camp-view h3 { font-size: 2rem; font-weight: lighter; margin-bottom: 20px; }
+.kids-summer-camp-view .overview { padding: 40px 40px 70px 40px; text-align: center; background-color: #f1f3f5; border-top: 1px solid #eceff3; border-bottom: 1px solid #eceff3; }
+.kids-summer-camp-view .overview h2 { color: #8851B3; }
+.kids-summer-camp-view .overview p { max-width: 80%; margin: 0 auto; }
+.kids-summer-camp-view .details { font-style: italic; padding: 40px; }
+.kids-summer-camp-view .details p { display: block; margin: 0 auto; width: 200px; }
+.kids-summer-camp-view .details .value { font-style: italic; }
+.kids-summer-camp-view .dates { padding: 40px 40px 70px 40px; text-align: center; background-color: #f1f3f5; border-top: 1px solid #eceff3; border-bottom: 1px solid #eceff3; }
+.kids-summer-camp-view .date-list { margin: 40px auto 30px auto; display: flex; flex-flow: row wrap; justify-content: center; max-width: 80%; }
+.kids-summer-camp-view .date-list-item { flex: 0 1 30%; text-align: center; }
+.kids-summer-camp-view .date-list-item a { border-radius: 3px; display: block; width: 100%; height: 100%; line-height: 3rem; color: #8851B3; cursor: pointer; white-space: nowrap; transition: color 0.3s, background-color 0.2s; }
+.kids-summer-camp-view .date-list-item a:hover { background-color: #c7aade; color: #24063b; }
+
+@media (max-width: 1050px) {
+	.kids-summer-camp-view .date-list-item { flex: 0 1 45%; }
+}
+
+@media (min-width: 751px) {
+	.kids-summer-camp-view .split { display: flex; flex-flow: row; justify-content: center; }
+	.kids-summer-camp-view .split > div:not(:first-child) { flex: 1 1 auto; justify-content: center; display: flex; flex-flow: column; max-width: 400px; }
+	.kids-summer-camp-view .image { flex: 0 0 50%; text-align: center; max-width: 500px; }
+	.kids-summer-camp-view .image img { margin: 0 auto; }
+}
+
+@media (max-width: 750px) {
+	.kids-summer-camp-view .sponsor-logos .image:first-child { display: none; }
+	.kids-summer-camp-view .date-list-item { flex: 0 1 100%; }
+}
+
+@media (min-width: 401px) {
+	.kids-summer-camp-view .sponsor-logos { display: flex; flex-flow: row; align-items: center; }
+	.kids-summer-camp-view .sponsor-logos .image { flex: 0 0 33%; max-width: 200px; margin: 0 auto; }
+}
+
 .bring-the-ruckus { font-family: Helvetica, Arial, sans-serif; }
 .bring-the-ruckus .uppercase { text-transform: uppercase; }
 .bring-the-ruckus .sponsor-logos .image { padding: 20px; }
@@ -89,10 +130,6 @@ body { font-family:"bebas-neue",sans-serif; margin: 0; padding: 0; font-size: 16
 @media (min-width: 401px) {
 	.bring-the-ruckus .sponsor-logos { display: flex; flex-flow: row; align-items: center; }
 	.bring-the-ruckus .sponsor-logos .image { flex: 0 0 33%; max-width: 200px; margin: 0 auto; }
-}
-
-@media (max-width: 400px) {
-	.bring-the-ruckus .sponsor-logos {  }
 }
 
 /********************************************************************/
